# cake-randomizer

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Gemfile  LICENSE  Procfile  README.md  Rocket.toml  app.rb  config.ru
lib/: cake-randomizer.rb  cake_randomizer.rb
lib/cake-randomizer/: app.rb  ingredients.rb  version.rb
lib/cake_randomizer/: app.rb  ingredients.rb
public/css/: cake-randomizer.css
ruby/lib/cake_randomizer/: ingredients.rb  version.rb
ruby/views/: layout.erb  recipe.erb
src/: main.rs  recipe.rs
templates/: base.html.tera  index.html.tera  recipe.html.tera
views/: layout.erb  recipe.erb
