[package]
name = "cake-randomizer"
version = "0.5.0"
description = "A web application generating cake recipes."
authors = ["Marta Paciorkowska <marta@paciorkowska.pl>"]

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
tera = "0.11"

[dependencies.rocket_contrib]
version = "0.4.0"
features = ["tera_templates"]
